Fix slider style to avoid clipping sides.

--- a/color-hustler/src/Slider.css
+++ b/color-hustler/src/Slider.css
@@ -2,7 +2,7 @@ input[type=range][orient=vertical]
 {
     writing-mode: bt-lr; /* IE */
     -webkit-appearance: slider-vertical; /* WebKit */
-    width: 8px;
+    width: 20px;
     height: 175px;
     padding: 0 5px;
 }
